--- a/app/src/main/res/layout/found_layout.xml
+++ b/app/src/main/res/layout/found_layout.xml
@@ -1,6 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FoundActivity"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigationMenu"
+        app:itemTextColor="@drawable/navbar_color"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
+        app:menu="@menu/navigation_menu" />
+
+    <ImageView
+        android:id="@+id/gambarBarang_found"
+        android:background="#4CBEBA"
+        android:src="@drawable/ic_camera_alt_black_24dp"
+        android:layout_width="match_parent"
+        android:layout_height="220dp" />
+    <TextView
+        android:id="@+id/judlDes"
+        android:text="Deskripsi Barang"
+        android:textSize="21sp"
+        android:layout_marginTop="12dp"
+       android:gravity="center_horizontal"
+        android:layout_below="@id/gambarBarang_found"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_marginTop="9dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_below="@+id/judlDes"
+        android:id="@+id/judul_found"
+        android:layout_width="wrap_content"
+        android:text="Judul"
+        style="@style/TextAppearance.AppCompat.Body2"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/edittext_judul"
+        android:hint="Judul barang"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="8dp"
+        android:layout_below="@+id/judul_found"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <TextView
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Desc_found"
+        android:text="Deskripsi barang"
+        style="@style/TextAppearance.AppCompat.Body2"
+        android:layout_below="@+id/edittext_judul"/>
+
+    <EditText
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_below="@+id/Desc_found"
+        android:id="@+id/edittext_desc"
+        android:hint="desk barang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/lokasi_found"
+        android:layout_width="match_parent"
+        android:text="Lokasi"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        style="@style/TextAppearance.AppCompat.Body2"
+        android:layout_below="@id/edittext_desc"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/edittext_lokasi"
+        android:layout_below="@+id/lokasi_found"
+        android:layout_width="300dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:hint="Lokasi"
+        android:layout_marginRight="8dp"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn_found"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Submit"
+        android:background="@drawable/cust_button"
+
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@+id/edittext_lokasi"
+        android:layout_width="match_parent"
+        android:layout_height="48dp" />
+    <Button
+        android:id="@+id/map_found"
+        android:background="@android:color/transparent"
+        android:layout_below="@+id/lokasi_found"
+        android:layout_marginLeft="320dp"
+        android:drawableLeft="@drawable/ic_map"
+        android:text="Map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
